feat(impl): [#528] extract constraints to constants